Keep preference URL params only when customized

--- a/2.md
+++ b/2.md
@@ -44,7 +44,7 @@ currentUserId.subscribe(v => { if (typeof window!=='undefined') localStorage.set
 
 export const currentUser = derived([users, currentUserId], ([$users, $id]) => $users.find(u=>u.id===$id) || $users[0]);
 
-Minimal switcher (add to Settings or Launchpad)
+Minimal switcher (add to Settings or header menu)
 <!-- src/lib/users/UserSwitch.svelte -->
 <script lang="ts">
   import { users, currentUserId } from './user-store';
@@ -59,7 +59,7 @@ Minimal switcher (add to Settings or Launchpad)
 </div>
 
 
-Add <UserSwitch /> to /settings or /launchpad as you prefer.
+Add <UserSwitch /> to /settings or expose via the header menu as you prefer.
 
 2) Chat v2 — rooms, mentions, fixed right-rail behavior
 2.1 Chat types + store (local, backend-ready)
