--- a/3.md
+++ b/3.md
@@ -271,7 +271,7 @@ Add a tiny helper class to color chips in materials:
   {/each}
 </section>
 
-3) Theme switch remains in Launchpad
+3) Theme switch remains in the header bar
 
 Make sure it toggles data-theme on <html> (our theme store already does this). Everything above will react automatically.
 
