--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -32,7 +32,6 @@
   },
   "nav": {
     "dashboard": "Панель",
-    "launchpad": "Лончпад",
     "calendar": "Календарь",
     "orders": "Заказы",
     "inventory": "Склад",
@@ -215,6 +214,12 @@
     "text_size": "Размер текста",
     "text_size_toggle": "Изменить размер текста",
     "text_size_hint": "Нажмите для переключения размеров текста",
+    "text_size_options": {
+      "sm": { "label": "Мелкий текст", "abbr": "Мелкий" },
+      "md": { "label": "Обычный текст", "abbr": "Обычный" },
+      "lg": { "label": "Крупный текст", "abbr": "Крупный" },
+      "xl": { "label": "Очень крупный текст", "abbr": "Очень крупный" }
+    },
     "help_hints": "Подсказки",
     "show_hints": "Показывать подсказки в интерфейсе"
   },
@@ -235,9 +240,9 @@
     "q4": "Что означают разные бейджи заказов?",
     "a4": "DRAFT = предварительный заказ, URGENT = высокий приоритет, BLOCKED = проблемы мешают прогрессу, IN_PROGRESS = в работе, DONE = завершено.",
     "q5": "Как изменить тему?",
-    "a5": "Перейдите на Панель запуска и выберите предпочитаемую тему: Светлая, Темная или Высокая контрастность.",
+    "a5": "Используйте элементы управления в шапке, чтобы выбрать предпочитаемую тему: Светлая, Темная или Высокая контрастность.",
     "q6": "Можно ли изменить размер текста?",
-    "a6": "Да! Используйте контрол Размер текста на странице Панель запуска для переключения между Нормальным, Большим и Очень большим размером текста."
+    "a6": "Да! Используйте контрол размера текста в шапке, чтобы переключаться между Маленьким, Стандартным, Большим и Очень большим размером текста."
   },
   "toast": {
     "approved": "Запрос утвержден",
